# TinyTools.Desktop

./: .eslintrc.cjs  .gitignore  .npmrc  README.md  UPDATE_LOG.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.js  electron.vite.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json
.github/workflows/: main.yml
scripts/: release.mjs  removeSourceMap.js  updateArknightsResource.ts  updateBuiltInAvatar.ts  updatelog.mjs
src/main/: CustomProtocol.ts  IPC.ts  IPCHelper.ts  Logger.ts  ThirdPartyAPI.js  Tray.ts  UpdaterHelper.ts  Window.ts  gitee-updater-ts.ts  index.js  index.ts  vite-env.d.ts
src/main/Services/: CacheService.ts
src/main/lib/node-geticon/: CMakeLists.txt  README.md  binding.gyp  example.js  index.js  install.js  package.json  test.js  tsconfig.json
src/main/lib/node-geticon/lib/: addon.cc
src/main/lib/node-geticon/src/: index.ts
src/main/services/: CacheService.ts  ResourceService.ts
src/main/utils/: Downloader.ts  FSUtil.ts  GetFileThumbnail.ts  SingleInstanceCheck.ts  fsUtil.ts
src/preload/: index.ts
src/renderer/: components.d.ts  index.html
src/renderer/public/: splashscreen.html
src/renderer/public/arknights/: char_002_amiya.json  char_003_kalts.json  char_009_12fce.json  char_010_chen.json  char_017_huang.json  char_1001_amiya2.json  char_1011_lava2.json  char_1012_skadi2.json  char_1013_chen2.json  char_1014_nearl2.json  char_1016_agoat2.json  char_101_sora.json  char_1020_reed2.json  (+323 more)
src/renderer/src/: App.vue  config.ts  db.ts  main.ts
(+201 files in other folders)
